# PortfolioTreacker

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MODULAR_LIBRARY_SUMMARY.md  PROJECT_COMPLETION.md  PROJECT_SUMMARY.md  README.md  database.py  debug_output.json  examples_modular.py  project.py  pyproject.toml  requirements.txt  test_crud.py  wallet_ui.py
.vercel/: project.json
docs/: API.md  CONTRIBUTING.md
docs/for ai/: DATABASE_LAYER.md  EXAMPLES_AND_USAGE.md  FRONTEND_TEMPLATE_DASHBOARD.md  WALLEX_PACKAGE.md  WALLEX_REST_CLIENT.md  WALLEX_TYPES_UTILS.md  WALLEX_WEBSOCKET_CLIENT.md
documentation/: README.md
documentation/01-getting-started/: ai-documentation-index.md  project-overview.md
documentation/03-development/: contributing-guide.md  contributing.md
documentation/04-technical-details/: web-ui-layer.md
suggestions/: caching_performance.py  config_management.py  error_handling.py  performance_optimizations.py  security_enhancements.py  testing_framework.py
templates/: dashboard.html  database.html  live_prices.html  portfolio.html
tests/: README.md  __init__.py  conftest.py  test_account.py  test_account_management.py  test_api.py  test_api_operations.py  test_balance.py  test_balance_operations.py  test_client.py  test_data_analysis.py  test_database.py  test_integration.py  test_market_data.py  test_markets.py  test_modular.py  test_performance.py  test_portfolio_operations.py  test_trading_operations.py  test_wallex.py  test_wallex_client.py  test_websocket_operations.py
wallex/: __init__.py  client.py  config.py  exceptions.py  rest.py  socket.py  types.py  utils.py
