[project]
name = "wallex-python-client"
version = "1.0.0"
description = "A comprehensive Python client for Wallex cryptocurrency exchange API and WebSocket connections"
readme = "README.md"
requires-python = ">=3.8.1"
license = {text = "MIT"}
authors = [
    {name = "Wallex Python Client", email = "support@example.com"}
]
keywords = ["wallex", "cryptocurrency", "trading", "api", "websocket", "crypto", "exchange"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "requests>=2.31.0",
    "websocket-client>=1.6.0",
    "python-socketio>=5.8.0",
    "aiohttp>=3.8.0",
    "typing-extensions>=4.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/wallex/wallex-python-client"
Documentation = "https://wallex-python-client.readthedocs.io/"
Repository = "https://github.com/wallex/wallex-python-client.git"
"Bug Tracker" = "https://github.com/wallex/wallex-python-client/issues"
Changelog = "https://github.com/wallex/wallex-python-client/blob/main/CHANGELOG.md"

[project.scripts]
wallex-client = "wallex_client:main"
